k8s/manifests/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-svc
  namespace: hiresense

spec:
  selector:
    app: backend

  ports:
  - name: http
    port: 3000
    targetPort: 3000

  type: ClusterIP
