k8s/manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: hiresense

spec:
  selector:
    app: frontend

  ports:
  - name: http
    port: 80
    targetPort: 80

  type: ClusterIP
